# Data-Manipulation-Rust-Pandas

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  python_benchmark.py
