[package]
name = "terrorism"
version = "0.1.0"
authors = ["xavier tao <shavtao@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.63"
serde_with = "1.6.4"
encoding_rs = "0.8.13"
encoding_rs_io = "0.1.3"
# rayon = "1.5"
# polars = { git =  "https://github.com/ritchie46/polars" }
itertools = "0.10.0"